--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -11,7 +11,21 @@
   justify-content: center;
   align-items: center;
 
+  > *:first-child {
+    flex: 7.5;
+  }
+
+  > *:last-child {
+    flex: 2.5;
+  }
+
   > * {
-    margin: 1rem;
+    margin: 0px 1rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
   }
 }
