--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -8,9 +8,6 @@ main {
   display: none;
 }
 
-.onboarding-question {
-  text-align: center;
-}
 
 .button-onboarding {
   margin-top: 2rem;
@@ -19,8 +16,13 @@ main {
 .onboarding-question {
   margin: auto;
   max-width: 500px;
+  text-align: center;
 
   & select {
     margin-top: 1.5rem;
   }
+}
+
+#message-9, #message-10 {
+  margin-top: 2rem;
 }
