--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1,4 +1,4 @@
-main {
+form {
   margin: auto;
   margin-top: 10rem;
   margin-bottom: 5rem;
@@ -7,7 +7,6 @@ main {
 .hidden {
   display: none;
 }
-
 
 .button-onboarding {
   margin-top: 2rem;
@@ -23,6 +22,7 @@ main {
   }
 }
 
-#message-9, #message-10 {
+#message-9,
+#message-10 {
   margin-top: 2rem;
 }
