--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -26,3 +26,17 @@ form {
 #message-10 {
   margin-top: 2rem;
 }
+
+.header-area.header-sticky .logo {
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: space-between;
+  color: #8261ee;
+  font-weight: bold;
+
+  & img {
+    margin-right: 0.5rem;
+  }
+}
